# kurinji

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: CI.yml
example/: binding_from_json.rs  binding_gamepad_from_ron.rs  binding_gamepad_in_code.rs  binding_in_code.rs  enum.rs  example_action_events.rs  gamepad_with_code.rs  gamepad_with_ron.rs  input_map.rs  keyboard_mouse_with_code.rs  with_action_events.rs
example/config/: binding.json  confirmation_dialog_binding.ron  game_view_binding.ron  gamepad.ron  inventory_binding.ron
src/: action.rs  action_event.rs  actionevent.rs  axis.rs  bindings.rs  config.rs  event_phase.rs  eventphase.rs  gamepad.rs  input_map.rs  inputmap.rs  keyboard.rs  kurinji.rs  lib.rs  mouse.rs  phase.rs  serde.rs  stack.rs  util.rs
