[package]
name = "bevy_prototype_input_map"
version = "0.1.2"
edition = "2018"
authors = ["Pradeep Kumar Rajamanickam <raj.pradeep.kumar@gmail.com>"]
description = "Adds support for input mapping"
readme = "README.md"
example = "example/input_map.rs"
repository = "https://github.com/PradeepKumarRajamanickam/bevy_input_map"
license = "MIT"
keywords = ["gamedev", "bevy", "inputmap","actionmapping"]

[dependencies]
# bevy
bevy = { version="0.1.3", features = ["serialize"]}
bevy_app = "0.1"
bevy_ecs = "0.1"
bevy_input = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "*"

[[example]]
name = "with_code"
path = "example/binding_in_code.rs"

[[example]]
name = "with_json"
path = "example/binding_from_json.rs"