[package]
name = "bevy_prototype_input_map"
version = "0.1.3"
edition = "2018"
authors = ["Pradeep Kumar Rajamanickam <raj.pradeep.kumar@gmail.com>"]
description = "Adds support for input mapping"
readme = "README.md"
example = "example/input_map.rs"
repository = "https://github.com/PradeepKumarRajamanickam/bevy_input_map"
license = "MIT"
keywords = ["gamedev", "bevy", "inputmap","actionmapping"]

[dependencies]
# bevy
bevy = { version="0.2", features = ["serialize"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.6.2"

[[example]]
name = "keyboard_mouse_with_code"
path = "example/binding_in_code.rs"

[[example]]
name = "keyboard_mouse_with_json"
path = "example/binding_from_json.rs"

[[example]]
name = "gamepad_with_code"
path = "example/binding_gamepad_in_code.rs"

[[example]]
name = "gamepad_with_ron"
path = "example/binding_gamepad_from_ron.rs"

[[example]]
name = "with_action_events"
path = "example/example_action_events.rs"