[package]
name = "kurinji"
version = "1.0.5"
edition = "2018"
authors = ["Pradeep Kumar Rajamanickam <raj.pradeep.kumar@gmail.com>"]
description = "Input map for bevy "
readme = "README.md"
repository = "https://github.com/PradeepKumarRajamanickam/kurinji"
license = "MIT"
keywords = ["gamedev", "bevy", "inputmap","actionmapping"]

[dependencies]
# bevy
bevy = { version="0.5", features = ["serialize"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.6.2"

[[example]]
name = "keyboard_mouse_with_code"
path = "example/keyboard_mouse_with_code.rs"

[[example]]
name = "keyboard_mouse_with_json"
path = "example/keyboard_mouse_with_json.rs"

[[example]]
name = "gamepad_with_code"
path = "example/gamepad_with_code.rs"

[[example]]
name = "gamepad_with_ron"
path = "example/gamepad_with_ron.rs"

[[example]]
name = "with_action_events"
path = "example/with_action_events.rs"
